# Simple-TTS-Workflow

./: .gitignore  README.md  main.py  pyproject.toml
role/示例预设/: README.md  preset.json
simplettsworkflow/: __init__.py  app.py  emotion.py  logging_config.py  model_download.py  settings.py  tts.py  voice_presets.py
static/: app.js  styles.css
templates/: index.html
tests/: test_app.py  test_emotion.py  test_model_download.py  test_tts.py  test_voice_presets.py
