[project]
name = "simplettsworkflow"
version = "0.1.0"
description = "A small FastAPI workflow for Qwen3-TTS voice cloning."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "qwen-tts>=0.1.0",
    "soundfile>=0.12.1",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["simplettsworkflow*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
